--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 1337",
     "build": "ng build",
+    "deploy": "ng build && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,11 +21,12 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^5.0.0-beta2",
     "diff": "^4.0.2",
     "file-saver": "^2.0.2",
     "firebase": "^7.0.0 || ^8.0.0",
     "jquery": "^3.5.1",
+    "ng-lazyload-image": "^9.1.0",
     "ngx-dropzone": "^2.2.2",
     "rxjs": "~6.5.4",
     "semver": "^7.3.4",
