--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^11.1.1",
     "@angular/animations": "~11.2.5",
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
@@ -37,8 +38,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1100",
-    "@angular-devkit/build-angular": "~0.901.11",
+    "@angular-devkit/architect": "^0.1002.3",
+    "@angular-devkit/build-angular": "^0.901.15",
     "@angular/cli": "^11.2.4",
     "@angular/compiler-cli": "~11.2.5",
     "@types/jasmine": "~3.5.0",
