--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,11 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "file-saver",
+              "jquery",
+              "xlsx"
             ]
           },
           "configurations": {
