--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
             "allowedCommonJsDependencies": [
               "file-saver",
               "jquery",
-              "xlsx"
+              "xlsx",
+              "runeterra"
             ]
           },
           "configurations": {
