--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.5.1",
     "ng-lazyload-image": "^9.1.0",
     "ngx-dropzone": "^2.2.2",
+    "runeterra": "^3.0.0",
     "rxjs": "~6.6.6",
     "semver": "^7.3.4",
     "text-diff": "^1.0.1",
