--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^7.0.0 || ^8.0.0",
     "jquery": "^3.5.1",
     "ng-lazyload-image": "^9.1.0",
+    "ngx-clipboard": "^14.0.1",
     "ngx-dropzone": "^2.2.2",
     "runeterra": "^3.0.0",
     "rxjs": "~6.6.6",
