--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@ng-select/ng-select": "^6.1.0",
     "bootstrap": "^5.0.0-beta2",
     "diff": "^4.0.2",
     "file-saver": "^2.0.2",
