--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "firebase": "^7.0.0 || ^8.0.0",
     "jquery": "^3.5.1",
     "ng-lazyload-image": "^9.1.0",
+    "ngx-autosize": "^1.8.4",
     "ngx-clipboard": "^14.0.1",
+    "ngx-device-detector": "^2.0.7",
     "ngx-dropzone": "^2.2.2",
     "runeterra": "^3.0.0",
     "rxjs": "~6.6.6",
