--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@ng-select/ng-select": "^6.1.0",
-    "bootstrap": "^5.0.0-beta2",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.0",
+    "bootstrap-icons": "^1.5.0",
     "diff": "^4.0.2",
     "file-saver": "^2.0.2",
     "firebase": "^7.0.0 || ^8.0.0",
@@ -34,6 +36,7 @@
     "ngx-clipboard": "^14.0.1",
     "ngx-device-detector": "^2.0.7",
     "ngx-dropzone": "^2.2.2",
+    "postcss": "^8.2.15",
     "runeterra": "^3.0.0",
     "rxjs": "~6.6.6",
     "semver": "^7.3.4",
@@ -44,7 +47,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1002.3",
-    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular-devkit/build-angular": "^0.1102.12",
     "@angular/cli": "^11.2.4",
     "@angular/compiler-cli": "~11.2.5",
     "@types/jasmine": "~3.5.0",
