--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-saver": "^2.0.2",
     "firebase": "^7.0.0 || ^8.0.0",
     "jquery": "^3.5.1",
+    "lor-deckcodes-ts": "^1.0.4",
     "ng-lazyload-image": "^9.1.0",
     "ngx-autofocus-fix": "^1.0.4",
     "ngx-autosize": "^1.8.4",
@@ -38,7 +39,6 @@
     "ngx-device-detector": "^2.0.7",
     "ngx-dropzone": "^2.2.2",
     "postcss": "^8.2.15",
-    "runeterra": "^3.0.0",
     "rxjs": "~6.6.6",
     "semver": "^7.3.4",
     "text-diff": "^1.0.1",
